<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/routes" android:icon="@drawable/ic_map" android:id="@+id/routesFragment"/>
    <item android:title="@string/map" android:icon="@drawable/ic_navigation_arrow" android:id="@+id/mapsFragment"/>
    <item android:title="@string/setting" android:icon="@drawable/ic_settings" android:id="@+id/settingsFragment"/>
</menu>