<resources>
    <string name="app_name" translatable="false">SetRoute</string>
    <string name="routes">Routes</string>
    <string name="setting">Setting</string>
    <string name="select_a_language">Select a language</string>
    <string name="switch_to_miles">Switch to miles</string>
    <string name="switch_to_dark_mode">Switch to dark mode</string>
    <string name="cancel">Cancel</string>
    <string name="map">Map</string>
    <string name="unit_km">km</string>
    <string name="unit_min">min</string>
    <string name="sort">Sort</string>
    <string name="filter" >Filter</string>
    <string name="sort_order">Apply sorting:</string>
    <string name="apply">Apply</string>
    <string name="filter_options">Filter options:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <!-- Sorting options fields + identifier for mapping -->
    <string-array name="sort_options">
        <item>Title</item>
        <item>Duration</item>
        <item>Distance</item>
    </string-array>
    <string-array name="sort_options_identifier" translatable="false">
        <item>title</item>
        <item>duration</item>
        <item>distance</item>
    </string-array>
    <string name="unit_miles">miles</string>
    <string name="feedback" >Feedback</string>
    <string name="submit_button">Submit</string>
    <string name="start">Start</string>
    <string name="walked_tag">walked</string>
    <!-- Filtering options fields + identifier for mapping -->
    <string-array name="filter_options">
        <item>Park Lovers</item>
        <item>Sightseeing Addicted</item>
        <item>Coffee Lovers</item>
        <item>Dog Walk</item>
        <item>Alcoholics</item>
        <item>Romantic Walk</item>
        <item>Sport Freaks</item>
    </string-array>
    <string name="duration">Duration:</string>
    <string name="distance">Distance:</string>
</resources>