...
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAppearance="?attr/textAppearanceBody1"
                android:text="@string/select_a_language"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/language_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:spinnerMode="dialog"
...
